WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11809
fast/dom/gc-8.html crash in alternate-thread marking code in ScriptInterpreter
https://bugs.webkit.org/show_bug.cgi?id=11809
Summary
fast/dom/gc-8.html crash in alternate-thread marking code in ScriptInterpreter
Brady Eidson
Reported
2006-12-11 19:37:01 PST
While working on a large patch, I started to see fast/dom/gc-8.html fail with some regularity. Talking with a few other members of the WebKit team I've learn that others have seen it anywhere from occasionally to regularly, as well. I'm attaching the stack trace but I can't capture this in the debugger - the test by itself seems to not fail, and adding tests before it to cause its failure is more of an art than a science.
Attachments
Crash log for the layout test gc-8.html
(4.91 KB, text/plain)
2006-12-11 19:40 PST
,
Brady Eidson
no flags
Details
patch, including debug harness I used to diagnose and test
(10.78 KB, patch)
2006-12-11 23:19 PST
,
Darin Adler
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2006-12-11 19:40:12 PST
Created
attachment 11813
[details]
Crash log for the layout test gc-8.html fast/dom/gc-8.html crash log, here you go! To repro this, I simply ran run-webkit-tests fast/dom - it crashes about 2/3 the way through the top level directory
Darin Adler
Comment 2
2006-12-11 21:55:02 PST
I've been seeing the same crash.
Dave Hyatt
Comment 3
2006-12-11 21:56:27 PST
Did anyone see this before I landed the ICU abstraction? I'm suspicious of that change now even though the crash log looks unrelated.
Brady Eidson
Comment 4
2006-12-11 22:02:36 PST
While the first time I ever saw this problem was today, I haven't updated since Thursday, so the ICU abstraction is out for my tree...
Brady Eidson
Comment 5
2006-12-11 22:07:07 PST
lemme amend and clarify my statement - I'm running on 18092 + local mods. Hyatt landed the ICU abstraction in 18098.
Darin Adler
Comment 6
2006-12-11 23:19:06 PST
Created
attachment 11814
[details]
patch, including debug harness I used to diagnose and test
Geoffrey Garen
Comment 7
2006-12-11 23:24:47 PST
Comment on
attachment 11814
[details]
patch, including debug harness I used to diagnose and test r=me
Darin Adler
Comment 8
2006-12-11 23:52:49 PST
Committed revision 18171.
Alexey Proskuryakov
Comment 9
2006-12-12 00:17:51 PST
Marking as fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug