WebCore/bindings/js/kjs_binding.h
@@ -49,8 +49,11 @@ namespace KJS {
         // DOMObject Destruction is not thread-safe because JS DOM objects 
         // wrap unsafe WebCore DOM data structures
         DOMObject() : JSObject(false) {}
+#ifndef NDEBUG
+        virtual ~DOMObject();
+#endif
     public:
-        virtual UString toString(ExecState *exec) const;
+        virtual UString toString(ExecState*) const;
     };
 
     class DOMNode;
